# gbot

./: Changelog  Makefile.am  README  bootstrap  configure.ac  project.pbxproj
doc/: AUTHORS  TODO  gbot.man
etc/: events.conf  events.conf.mrdyc  gbot.conf  gbot.conf.mrdyc
scripts/: Makefile.am  crontab  regex.c  run-bot
scripts/syntax/: README  gbot.syntax
src/: Makefile.am  defaults.h  events.c  events.h  lib.c  lib.h  logging.c  logging.h  main.c  main.h  net.c  net.h  readcfg.c  readcfg.h  server.c  server.h  session.c  session.h
