
#bin_PROGRAMS = $(PACKAGE)
bin_PROGRAMS = gbot

#$(PACKAGE)_SOURCES = ...
gbot_SOURCES = lib.c logging.c events.c main.c net.c readcfg.c server.c
#session.c

EXTRA_DIST = defaults.h events.h lib.h logging.h main.h net.h readcfg.h server.h
#session.h

CLEANFILES = *~ *.orig *.rej *.output ev_read.c ev_read.h stamp-h*

